Fix #3307 (#3309)
* Fix #3307 - Easier string interpolation

As proposed in the issue description, remove the need for initial
quoutes in case of string interpolation

* Alternative implementation using optional